--- a/templates/users/userprofile.html
+++ b/templates/users/userprofile.html
@@ -7,6 +7,11 @@
         Hi {{user.username}}!
     </h2>
     
-
+    <br>
+    <p><i>Ready to Create Your Own GameList? 
+        <a href="/user/{{user.id}}/add-game">Click Here</a></i></p>
     
+    <b><p>HERE ARE YOUR GAMELIST:</p></b>
+    
+  
 {% endblock %}
