add show review route

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
       {% else %}
 
       <li>
-        <a href="/user/{{ g.user.id }}">
+        <a href="/user/{{ g.user.id }}/gamelist">
           <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
         </a>
       </li>
