--- a/templates/base.html
+++ b/templates/base.html
@@ -39,13 +39,15 @@
       {% if not g.user %}
       <li><a href="/signup">Sign up</a></li>
       <li><a href="/login">Log in</a></li>
-      {% else %}
 
+
+      {% else %}
       <li>
         <a href="/user/{{ g.user.id }}/gamelist">
           <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
         </a>
       </li>
+      <li><a href="/">Home</a></li>   
       <li><a href="/logout">Log out</a></li>
       {% endif %}
 
