--- a/templates/review/edit_review.html
+++ b/templates/review/edit_review.html
@@ -15,4 +15,12 @@
   <button type="submit">Save Changes</button>
 </form>
 
+
+<form method="POST" 
+action="/gamelist/{{gamelist.id}}/review/delete">   
+{{ form.hidden_tag() }}                 
+<button class="btn btn-outline-danger" name = "submit">Delete</button>
+</form>
+
+
 {% endblock %}
