added account edit capabilities

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
         </a>
       </li>
       <li><a href="/">Home</a></li>   
+      <li><a href="/account/user/{{g.user.id}}/edit">Account</a></li>   
       <li><a href="/logout">Log out</a></li>
       {% endif %}
 
