--- a/templates/home.html
+++ b/templates/home.html
@@ -17,15 +17,17 @@
     <br>
 
             {% if name_and_id %}
+                    Search Results:
+                    <hr>
                     <ul>
                         <li><a href='/boardgamelist/{{name_and_id["id1"]}}'>
-                            {{name_and_id["name1"]}} (ID # {{name_and_id["id1"]}})</a></li>
+                            {{name_and_id["name1"]}}</a></li>
                         <li><a href='/boardgamelist/{{name_and_id["id2"]}}'>
-                            {{name_and_id["name2"]}} (ID # {{name_and_id["id2"]}})</a></li>
+                            {{name_and_id["name2"]}}</a></li>
                         <li><a href='/boardgamelist/{{name_and_id["id3"]}}'>
-                            {{name_and_id["name3"]}} (ID # {{name_and_id["id3"]}})</a></li>
+                            {{name_and_id["name3"]}}</a></li>
                         <li><a href='/boardgamelist/{{name_and_id["id4"]}}'>
-                            {{name_and_id["name4"]}} (ID # {{name_and_id["id4"]}})</a></li>
+                            {{name_and_id["name4"]}}</a></li>
                     </ul> 
             {% endif %}
         
