aligned routes for users & gamelists

--- a/templates/boardgames/game_description.html
+++ b/templates/boardgames/game_description.html
@@ -11,7 +11,7 @@
                 </b><img src='{{game_details["thumb_url"]}}'></li>
                 
                 <br>
-                <a href="/user/{{g.user.id}}/add-game">Add To Gamelist</a>
+                <a href="/game/{{game_official_id}}/add">Add This Game</a>
                 <br>
 
                 <li><b>Description: 
