--- a/templates/home.html
+++ b/templates/home.html
@@ -20,13 +20,13 @@
                     Search Results:
                     <hr>
                     <ul>
-                        <li><a href='/boardgamelist/{{name_and_id["id1"]}}'>
+                        <li><a href='/game/{{name_and_id["id1"]}}'>
                             {{name_and_id["name1"]}}</a></li>
-                        <li><a href='/boardgamelist/{{name_and_id["id2"]}}'>
+                        <li><a href='/game/{{name_and_id["id2"]}}'>
                             {{name_and_id["name2"]}}</a></li>
-                        <li><a href='/boardgamelist/{{name_and_id["id3"]}}'>
+                        <li><a href='/game/{{name_and_id["id3"]}}'>
                             {{name_and_id["name3"]}}</a></li>
-                        <li><a href='/boardgamelist/{{name_and_id["id4"]}}'>
+                        <li><a href='/game/{{name_and_id["id4"]}}'>
                             {{name_and_id["name4"]}}</a></li>
                     </ul> 
             {% endif %}
