--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,8 @@
           <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
         </a>
       </li>
-      <li><a href="/">Home</a></li>   
+      <li><a href="/">Home</a></li>
+      <li><a href="/user/{{g.user.id}}/gamelist">My Gamelist</a></li>   
       <li><a href="/account/user/{{g.user.id}}">Account</a></li>   
       <li><a href="/logout">Log out</a></li>
       {% endif %}
