--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
       </li>
       <li><a href="/">Home</a></li>
       <li><a href="/user/{{g.user.id}}/gamelist">My Gamelist</a></li>   
+      <li><a href="/user/{{g.user.id}}/games">My Games</a></li>   
       <li><a href="/account/user/{{g.user.id}}">Account</a></li>   
       <li><a href="/logout">Log out</a></li>
       {% endif %}
