--- a/templates/users/all_games.html
+++ b/templates/users/all_games.html
@@ -10,7 +10,7 @@
         {% for game in games %}
 
         <ul>
-            <li>{{game.name}}</li>
+            <li><a href="/user/{{g.user.id}}/games/{{game.id}}">{{game.name}}</a></li>
         </ul>
 
     {% endfor %}
