--- a/templates/boardgames/edit_game.html
+++ b/templates/boardgames/edit_game.html
@@ -14,7 +14,7 @@
 
 
   <form method="POST" 
-    action="">   
+    action="/user/{{g.user.id}}/games/{{games.id}}/delete">   
     {{ form.hidden_tag() }}                 
     <button class="btn btn-outline-danger" name = "submit">Delete</button>
   </form>
