added css styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>BoardGame</title>
 
+  <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet"
         href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
   <script src="https://unpkg.com/jquery"></script>
@@ -18,48 +19,49 @@
 </head>
 
 <body>
-<nav>
   <div>
     <div>
-      
-    </div>
-    <ul>
-      {% if request.endpoint != None %}
-      <li>
-        <form action="/user">
-          <input name="q">
-          <button class="btn btn-default">
-            <span class="fa fa-search"></span>
-          </button>
-        </form>x
 
-
-      </li>
-      {% endif %}
       {% if not g.user %}
-      <li><a href="/signup">Sign up</a></li>
-      <li><a href="/login">Log in</a></li>
+      <nav class="navbar my-nav" style="background-color: #8b0707;">
 
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="/signup">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Log In</a>
+          </li>
+          </li>
+        </ul>
+        
+      </nav>
 
       {% else %}
-      <li>
-        <a href="/user/{{ g.user.id }}/gamelist">
-          <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
-        </a>
-      </li>
-      <li><a href="/">Home</a></li>
-      <li><a href="/user/{{g.user.id}}/gamelist">My Gamelist</a></li>   
-      <li><a href="/user/{{g.user.id}}/games">My Games</a></li>   
-      <li><a href="/account/user/{{g.user.id}}">Account</a></li>   
-      <li><a href="/logout">Log out</a></li>
+   
+      <nav class="navbar my-nav" style="background-color: #8b0707;">
+
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/{{g.user.id}}/gamelist">My Gamelist</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/{{g.user.id}}/games">My Games</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/account/user/{{g.user.id}}">Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+        </ul>
+      </nav>
       {% endif %}
 
 
-    </ul>
-  </div>
-
-  
-</nav>
 <div class="container">
   {% for category, message in get_flashed_messages(with_categories=True) %}
   <div class="alert alert-{{ category }}">{{ message }}</div>
