added dropdown for playlist and updated games

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@
   }
 
 
-.boardgamebanner {
+.heading {
     margin-top: 50px;
 }
 
@@ -85,3 +85,22 @@ ul li {
 img {
     max-height: 500px;
 }
+
+.gamelist-title {
+    display: inline-block;
+  }
+  
+  .small-delete-button {
+    display: inline-block;
+    margin-left: 10px; /* adjust the margin to your preference */
+  }
+
+
+.small-delete-button button {
+    /* padding: 5px 10px; */
+    font-size: 0.8em;
+    color: white;
+    background-color: #8b0707;
+
+  }
+  
