--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,10 @@
 {% block content %}
 
 
-    <div class="boardgamebanner">
+    <div class="heading">
     
         <h1>Ready To Search For Your Next BoardGame?</h1>
 
-    
     <br>
 
         <div class="searchbar">
